--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img padding=20px src="images/12.png" width=200px alt="images">
         <h2>Hello buddies~~<br>You are very welcome to my website.<br> My profile is below:</h2>
         <ul class="profile">
-          <li>Long life learner & Python fan (learning new things and skills efficiently and effectively)</li>
+          <li>A Lifelong learner & Python fan (learning new things and skills efficiently and effectively)</li>
           <li>Efficient at goal-oriented engineer thinking with excellent time management &problem-solving skills</li>
           <li>Boosted team efficiency obviously by Data Analyzing with MS Project, Excel pivot table, Power BI</li>
           <li>Multilingual: Fluent in English, Chinese and Shanghainese in oral and writing</li>
